<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/groupJoueur1"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/light_gray"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtNom1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imgJoueur1"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2sp"
            android:background="@drawable/border"
            android:backgroundTint="@color/white"
            android:padding="2sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/score"
                tools:ignore="TextSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/txtScore1"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/zero"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/groupJoueur2"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/light_gray"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtNom2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:textAlignment="center"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imgJoueur2"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2sp"
            android:background="@drawable/border"
            android:backgroundTint="@color/white"
            android:padding="2sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/score"
                tools:ignore="TextSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/txtScore2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/zero"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:id="@+id/grille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#4A148C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupJoueur1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/case1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:gravity="center"
                android:onClick="cases_OnClick"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/case2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:gravity="center"
                android:onClick="cases_OnClick"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/case3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:gravity="center"
                android:onClick="cases_OnClick"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/case4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:gravity="center"
                android:onClick="cases_OnClick"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/case5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:gravity="center"
                android:onClick="cases_OnClick"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/case6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:gravity="center"
                android:onClick="cases_OnClick"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/case7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="5dp"
                android:background="@color/white"
                android:gravity="center"
                android:onClick="cases_OnClick"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/case8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="5dp"
                android:background="@color/white"
                android:gravity="center"
                android:onClick="cases_OnClick"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/case9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/white"
                android:gravity="center"
                android:onClick="cases_OnClick"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnPartie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/light_gray"
        android:onClick="nouvPartie_OnClick"
        android:text="@string/nouvelle_partie"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>